Fixed link contrast / meta description

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -17,7 +17,7 @@ main {
 	width: clamp(83%, 80vw, 100.0rem);
 }
 a {
-	color: #3c9c9b;
+	color: #0a6564;
 }
 header, article {
 	border-bottom: 0.2rem solid black;
